# projects

./: .gitignore  README.md  pyproject.toml
data-camp/data_camp_courses/: exploratory_data_analysis.ipynb  introduction_to_numpy.ipynb  python_toolbox_courses.ipynb  working_with_categorical_data_in_python.ipynb
data-camp/projects/: investigating_netflix_movies_and_guest_stars_in_the_office.ipynb  python_toolbox_questions.ipynb  the_gitHub_history_of_the_scala_language.ipynb
data-camp/projects/analyzing_crime_in_los_angeles/: notebook.ipynb
machine-learnings/: library-version.ipynb
sql-query/: aggregate_functions.sql  as.sql  case.sql  cast.sql  creating_database_and_table.sql  full_outer_join.sql  having.sql  import_export.sql  inner_join.sql  left_outer_join.sql  mathematical_functions_operators.sql  nullif.sql  sql_statements_fundamentals.sql  string_functions_operators.sql  sub_query.sql  timestamps_and_extract.sql  views.sql
sql-query/assessment/: assessment1.sql  assessment2.sql  assessment3.sql
sql-query/challanges/: challenges_case..sql  challenges_group_by.sql  challenges_having.sql  challenges_join.sql  challenges_statements_fundamentals.sql  challenges_timestamps_and_extract.sql
