[tool.poetry]
name = "projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-io-gcs-filesystem = "0.30.0"
numpy = ">=1.23.5,<2.0.0"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
tensorflow = "2.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
